comunicacao com rabbitmq
